--- a/package.json
+++ b/package.json
@@ -21,12 +21,29 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.6.15",
-    "@nestjs/core": "^7.6.15",
+    "@apollo/gateway": "^2.0.5",
+    "@nestjs-query/core": "^0.30.0",
+    "@nestjs-query/query-graphql": "^0.30.0",
+    "@nestjs-query/query-typeorm": "^0.30.0",
+    "@nestjs/apollo": "^10.0.16",
+    "@nestjs/common": "^8.4.7",
+    "@nestjs/config": "^2.1.0",
+    "@nestjs/core": "^8.4.7",
+    "@nestjs/graphql": "^10.0.16",
     "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/typeorm": "^8.1.4",
+    "apollo-server-express": "^3.9.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "dataloader": "^2.1.0",
+    "graphql": "^16.5.0",
+    "graphql-subscriptions": "^2.0.0",
+    "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6"
+    "rxjs": "^7.5.5",
+    "ts-morph": "^15.1.0",
+    "typeorm": "^0.3.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
